          TODO: Fix multiple velocity controllers appearing on reload.
        - Fixed arranger trackinfo widgets sizing - were allowed to shrink vertically. (Tim)
          TODO: Fix trackinfo scrollbar not showing at right time.
        - Replace all QWidget::setShown() calls with setVisible(). (Tim)
          It's supposed to be a Qt3 function, but still supported.
02.01.2011:
        - Fixed arranger focussing problems again. (Tim)
          Scratch setFocusProxy() fix of 31.12. Gave MusE a keyPress handler and pass it on to canvas.
        - Fixed transport +/- position snapping. Works globally now too. (Tim)
          Moves by, and snaps to, snap setting of either an editor, or globally to arranger by default. 
        - Added transport position "Shift + +/-" keys, for no snapping. (Tim)
        - Removed (hopefully) the last bits of Qt3sepport functions from .ui files. (Orcan)
        - fixed patch loading for deicsonze and reverted to it's standard colortheme (rj)
31.12.2010:
        - Possible fix for arranger focussing problems. (Tim)
          Added parent->setFocusProxy(canvas) just after canvas created.
          Also added to pianoroll.
        - Added shadow behind the wallpaper titles for easier read. (Orcan)
30.12.2010:
        - Suggestion by OOM team: Add default velocity controllers to pianoroll and drum edit. (Tim)
        *Feature: Appearance part color names now can now be edited. (Tim)
          TODO: Add per-song settings and add toolbar with some colour goodies.
        *Feature: Mixer label colours can now be edited in the appearance settings. (Tim)
          TODO: Remix track icons using use alpha channel and special routine to mix in 
           these settable colours.
        *Fixed: Appearance settings palette was broken. (Tim)
          Note: A few odd Qt styles are wacky (Motif, Windows). Your mileage may vary.
        - In ctrl canvas, draw the grid before anything else. (Orcan)
29.12.2010: